# myCPU

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README_对接说明.md  main.cpp
.codex/environments/: environment.toml
config/: constants.h
cpu/: CPU.cpp  CPU.h  decode.cpp  execute.cpp  execute.h  isa.h
device/: uart.cpp
docs/: Plan.md  Prompt.md
loader/: loader.cpp
memory/: memory.cpp  memory.h
myCPU-main/: CMakeLists.txt  main.cpp
myCPU-main/cpu/: CPU.cpp  decode.cpp  decode.h  execute.cpp  isa.h
myCPU-main/device/: uart.h
myCPU-main/loader/: loader.h
myCPU-main/tests/: test_cpu_integration.cpp
tests/: test_cpu_integration.cpp  test_member_b.cpp  test_programs.h
tools/: check_env.ps1  enter_vsdev.ps1  trace_viewer.py
utils/: debug.cpp  debug.h
web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/public/traces/: pipeline-branch.jsonl  pipeline-forward.jsonl  pipeline-loaduse.jsonl  pipeline-raw.jsonl
web/scripts/: sync-samples.ps1
web/src/: main.tsx
web/src/app/: App.tsx  router.tsx
web/src/assets/: README.md
web/src/components/: Panel.tsx  Tag.tsx
web/src/features/lesson_hazard/: HazardPuzzleBoard.tsx  contracts.ts  levels.ts
web/src/features/pipeline/: PipelineStageCanvas.tsx  palette.ts  visuals.ts
web/src/features/trace/: parser.ts  sources.ts  types.ts
web/src/features/traffic_game/: TrafficIntersectionBoard.tsx  contracts.ts  engine.ts  levels.ts
web/src/routes/: HazardPuzzleRoute.tsx  HomeRoute.tsx  TrafficControlRoute.tsx
web/src/styles/: index.css
